Fixes case study promo cards being full width on IE11 because the browser doesnt support nested `calc()` values. Changed to pre-compute the rem value and put it in a single `calc()` call. (refs #35778)

--- a/application/website/static/website/css/init/_constants.scss
+++ b/application/website/static/website/css/init/_constants.scss
@@ -64,7 +64,7 @@ $max-site-width: 1300px;
 // Custom margins
 $block-margin-mobile: 5rem;
 $block-margin-desktop: calc(160 / 18 * 1rem);
-$callout-gap: calc(40 / 18 * 1rem);
+$callout-gap: 40 / 18 * 1rem;
 
 // Ring metrics
 $ring-count: 3;
